--- a/init-db/pyproject.toml
+++ b/init-db/pyproject.toml
@@ -10,6 +10,7 @@ python = "~3.12"
 duckdb = "0.10.2"
 httpx = "^0.27.0"
 polars = "~0.20.25"
+pyarrow = "^16.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
