--- a/init-db/pyproject.toml
+++ b/init-db/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^8.2.0"
 pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.23.6"
 python-dotenv = "^1.0.1"
+pyright = "^1.1.363"
 
 [build-system]
 requires = ["poetry-core"]
