--- a/append-last-trading-day/config.base.yaml
+++ b/append-last-trading-day/config.base.yaml
@@ -11,10 +11,10 @@ duckdb:
 #    - "../sql/table__daily_adjusted.sql"
     - "../sql/table__supported_tickers.sql"
     - "../sql/view__selected_us_tickers.sql"
+    - "../sql/view__selected_last_trading_day.sql"
 
 tiingo:
   format: csv
-
-
-
+  start_date: "1995-01-01"
+  columns: "date,close,adjClose,adjVolume"
 
