tests(append-last-trading-day): added tests to fetch.go after doing some refactoring

--- a/append-last-trading-day/Taskfile.yaml
+++ b/append-last-trading-day/Taskfile.yaml
@@ -6,3 +6,9 @@ tasks:
     dir: .
     cmds:
       - CGO_ENABLED=1 go run main.go
+
+  test:
+    desc: run tests
+    dir: .
+    cmds:
+      - go test -v ./...
