--- a/append-last-trading-day/config.base.yaml
+++ b/append-last-trading-day/config.base.yaml
@@ -7,8 +7,9 @@ extract:
 duckdb:
   append_table: daily_adjusted
   conn_init_fn_queries:
-    # - "../sql/table__last_trading_day.sql"
-#    - "../sql/table__daily_adjusted.sql"
+    # - "../sql/db__stage.sql"
+    - "../sql/table__last_trading_day.sql"
+    - "../sql/table__daily_adjusted.sql"
     - "../sql/table__supported_tickers.sql"
     - "../sql/view__selected_us_tickers.sql"
     - "../sql/view__selected_last_trading_day.sql"
