--- a/.github/workflows/stage__append-last-trading-day.yml
+++ b/.github/workflows/stage__append-last-trading-day.yml
@@ -23,15 +23,17 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('append-last-trading-day/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
       - name: Install dependencies
-        run: go mod download
+        run: cd append-last-trading-day && go mod download
 
       - name: Run main.go
-        run: CGO_ENABLED=1 go run append-last-trading-day/main.go
+        run: |
+          cd append-last-trading-day
+          CGO_ENABLED=1 go run main.go
         env:
           TIINGO_TOKEN: ${{ secrets.TIINGO_TOKEN }}
           MOTHERDUCK_TOKEN: ${{ secrets.MOTHERDUCK_TOKEN }}
