--- a/.github/workflows/stage__run-dagster.yaml
+++ b/.github/workflows/stage__run-dagster.yaml
@@ -4,6 +4,14 @@ on:
   schedule:
     - cron: '0 5 * * 0'
   workflow_dispatch:
+  # TEMPORARY
+  pull_request:
+    branches:
+      - "*"
+  push:
+    branches:
+      - "*"
+
 
 jobs:
   run-dagster:
