--- a/.github/workflows/stage__run-dagster.yaml
+++ b/.github/workflows/stage__run-dagster.yaml
@@ -33,10 +33,18 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "**/transformations/uv.lock"
 
+      - name: Cache uv dependencies
+        uses: actions/cache@v3
+        id: uv-cache
+        with:
+          path: ~/.cache/uv
+          key: ${{ runner.os }}-uv-${{ hashFiles('**/transformations/uv.lock') }}
+
       - name: Install Python
         run: uv python install 3.12
 
       - name: Install dependencies
+        if: steps.uv-cache.outputs.cache-hit != 'true'
         run: uv sync
 
       - name: Install Task
