--- a/.github/workflows/stage__run-dagster.yaml
+++ b/.github/workflows/stage__run-dagster.yaml
@@ -5,9 +5,6 @@ on:
     - cron: '0 5 * * 0'
   workflow_dispatch:
   # TEMPORARY
-  pull_request:
-    branches:
-      - "*"
   push:
     branches:
       - "*"
@@ -33,19 +30,25 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "**/transformations/uv.lock"
 
+      - name: Install Python
+        run: uv python install 3.12
+
       - name: Cache uv dependencies
         uses: actions/cache@v3
         id: uv-cache
         with:
           path: ~/.cache/uv
           key: ${{ runner.os }}-uv-${{ hashFiles('**/transformations/uv.lock') }}
-
-      - name: Install Python
-        run: uv python install 3.12
+          restore-keys: |
+            ${{ runner.os }}-uv-
 
       - name: Install dependencies
-        if: steps.uv-cache.outputs.cache-hit != 'true'
-        run: uv sync
+        run: |
+          if [ "${{ steps.uv-cache.outputs.cache-hit }}" != "true" ]; then
+            uv sync
+          else
+            echo "Cache hit, skipping uv sync"
+          fi
 
       - name: Install Task
         uses: arduino/setup-task@v2
