--- a/.github/workflows/stage__run-dagster.yaml
+++ b/.github/workflows/stage__run-dagster.yaml
@@ -34,21 +34,21 @@ jobs:
         run: uv python install 3.12
 
       - name: Cache uv dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         id: uv-cache
         with:
-          path: ~/.cache/uv
+          path: /home/runner/.cache/uv
           key: ${{ runner.os }}-uv-${{ hashFiles('**/transformations/uv.lock') }}
           restore-keys: |
             ${{ runner.os }}-uv-
 
       - name: Install dependencies
+        if: steps.uv-cache.outputs.cache-hit != 'true'
         run: |
-          if [ "${{ steps.uv-cache.outputs.cache-hit }}" != "true" ]; then
-            uv sync
-          else
-            echo "Cache hit, skipping uv sync"
-          fi
+          mkdir -p /home/runner/.cache/uv
+          uv sync
+          echo "Cache directory after uv sync:"
+          ls -R /home/runner/.cache/uv
 
       - name: Install Task
         uses: arduino/setup-task@v2
