--- a/dashboard/pyproject.toml
+++ b/dashboard/pyproject.toml
@@ -7,6 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "altair>=5.4.1",
     "duckdb==1.1.1",
+    "google-api-python-client>=2.149.0",
+    "google-auth-httplib2>=0.2.0",
+    "google-auth-oauthlib>=1.2.1",
+    "google-auth>=2.35.0",
     "ibis-framework>=9.5.0",
     "nbconvert>=7.16.4",
     "nbformat>=5.10.4",
