--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ bleach==6.1.0
 blinker==1.8.2
     # via streamlit
 cachetools==5.5.0
-    # via streamlit
+    # via
+    #   google-auth
+    #   streamlit
 certifi==2024.8.30
     # via requests
 charset-normalizer==3.4.0
@@ -34,6 +36,29 @@ gitdb==4.0.11
     # via gitpython
 gitpython==3.1.43
     # via streamlit
+google-api-core==2.21.0
+    # via google-api-python-client
+google-api-python-client==2.149.0
+    # via dashboard (dashboard/pyproject.toml)
+google-auth==2.35.0
+    # via
+    #   dashboard (dashboard/pyproject.toml)
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-auth-oauthlib
+google-auth-httplib2==0.2.0
+    # via
+    #   dashboard (dashboard/pyproject.toml)
+    #   google-api-python-client
+google-auth-oauthlib==1.2.1
+    # via dashboard (dashboard/pyproject.toml)
+googleapis-common-protos==1.65.0
+    # via google-api-core
+httplib2==0.22.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 ibis-framework==9.5.0
     # via dashboard (dashboard/pyproject.toml)
 idna==3.10
@@ -86,6 +111,8 @@ numpy==2.1.2
     #   pyarrow
     #   pydeck
     #   streamlit
+oauthlib==3.2.2
+    # via requests-oauthlib
 packaging==24.1
     # via
     #   altair
@@ -105,18 +132,32 @@ platformdirs==4.3.6
     # via jupyter-core
 polars==1.10.0
     # via dashboard (dashboard/pyproject.toml)
+proto-plus==1.24.0
+    # via google-api-core
 protobuf==5.28.2
-    # via streamlit
+    # via
+    #   google-api-core
+    #   googleapis-common-protos
+    #   proto-plus
+    #   streamlit
 pyarrow==17.0.0
     # via streamlit
 pyarrow-hotfix==0.6
     # via dashboard (dashboard/pyproject.toml)
+pyasn1==0.6.1
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.1
+    # via google-auth
 pydeck==0.9.1
     # via streamlit
 pygments==2.18.0
     # via
     #   nbconvert
     #   rich
+pyparsing==3.2.0
+    # via httplib2
 python-dateutil==2.9.0.post0
     # via
     #   ibis-framework
@@ -133,13 +174,20 @@ referencing==0.35.1
     #   jsonschema
     #   jsonschema-specifications
 requests==2.32.3
-    # via streamlit
+    # via
+    #   google-api-core
+    #   requests-oauthlib
+    #   streamlit
+requests-oauthlib==2.0.0
+    # via google-auth-oauthlib
 rich==13.9.3
     # via streamlit
 rpds-py==0.20.0
     # via
     #   jsonschema
     #   referencing
+rsa==4.9
+    # via google-auth
 six==1.16.0
     # via
     #   bleach
@@ -178,6 +226,8 @@ typing-extensions==4.12.2
     #   streamlit
 tzdata==2024.2
     # via pandas
+uritemplate==4.1.1
+    # via google-api-python-client
 urllib3==2.2.3
     # via requests
 webencodings==0.5.1
