--- a/.github/workflows/stage__append-last-trading-day.yaml
+++ b/.github/workflows/stage__append-last-trading-day.yaml
@@ -23,17 +23,17 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('append-last-trading-day/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFiles('EtL/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
       - name: Install dependencies
-        run: cd append-last-trading-day && go mod download
+        run: cd EtL && go mod download
 
       - name: Run main.go
         run: |
-          cd append-last-trading-day
-          CGO_ENABLED=1 go run main.go
+          cd EtL
+          CGO_ENABLED=1 go run main.go eod daily
         env:
           TIINGO_TOKEN: ${{ secrets.TIINGO_TOKEN }}
           MOTHERDUCK_TOKEN: ${{ secrets.MOTHERDUCK_TOKEN }}
