--- a/EtL/config.base.yaml
+++ b/EtL/config.base.yaml
@@ -27,12 +27,13 @@ tiingo:
     daily:
       format: csv
       start_date: "today-168h"
-      # columns: "date,marketCap,enterpriseVal,peRatio,pbRatio,trailingPEG1Y"
+      columns: "date,marketCap,enterpriseVal,peRatio,pbRatio,trailingPEG1Y"
     meta:
       format: csv
       columns: >-
         permaTicker,ticker,name,isActive,isADR,sector,industry,sicCode,
         sicSector,sicIndustry,reportingCurrency,location,companyWebsite,
         secFilingWebsite,statementLastUpdated,dailyLastUpdated
+
 
 
