test(EtL/pipeline): got initial integration tests to pass, needs to include more tests.

--- a/EtL/config.base.yaml
+++ b/EtL/config.base.yaml
@@ -8,15 +8,15 @@ duckdb:
   append_table: daily_adjusted # TODO: remove this. 1. it should not be here, 2. it doesn't seem to be used
   conn_init_fn_queries:
     # - "../sql/db__stage.sql"
-    - "../sql/schemas.sql"
-    - "../sql/table__last_trading_day.sql"
-    - "../sql/table__daily_adjusted.sql"
-    - "../sql/table__supported_tickers.sql"
-    - "../sql/table__fundamentals_meta.sql"
-    - "../sql/table__fundamentals_daily.sql"
-    - "../sql/view__selected_us_tickers.sql"
-    - "../sql/view__selected_last_trading_day.sql"
-    - "../sql/view__selected_fundamentals.sql"
+    - "./sql/schemas.sql"
+    - "./sql/table__last_trading_day.sql"
+    - "./sql/table__daily_adjusted.sql"
+    - "./sql/table__supported_tickers.sql"
+    - "./sql/table__fundamentals_meta.sql"
+    - "./sql/table__fundamentals_daily.sql"
+    - "./sql/view__selected_us_tickers.sql"
+    - "./sql/view__selected_last_trading_day.sql"
+    - "./sql/view__selected_fundamentals.sql"
 
 tiingo:
   eod:
