focs(EtL): updated TODOs and fixed config for fundamentals.daily

--- a/EtL/config.base.yaml
+++ b/EtL/config.base.yaml
@@ -27,7 +27,10 @@ tiingo:
     daily:
       format: csv
       start_date: "today-168h"
-      columns: "date,marketCap,enterpriseVal,peRatio,pbRatio,trailingPEG1Y"
+      ## OBS: even though the free text parf oof the docs for 2.6.4 Daily Data says columns param
+      ## is supported, the request definition for the endpoint does not include it. So, it seems
+      ## it is not supported.
+      # columns: "date,marketCap,enterpriseVal,peRatio,pbRatio,trailingPEG1Y"
     meta:
       format: csv
       columns: >-
