fix(EtL): updated install dir for golangci-lint

--- a/.github/workflows/pr__EtL_ci.yaml
+++ b/.github/workflows/pr__EtL_ci.yaml
@@ -37,6 +37,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: latest
+          working-directory: EtL
 
       - name: Run CI checks
         working-directory: EtL
