--- a/transformations/pyproject.toml
+++ b/transformations/pyproject.toml
@@ -3,7 +3,7 @@ name = "transformations"
 version = "0.1.0"
 description = "Data and ML pipeline transformations, orchstrated by Dagster"
 readme = "README.md"
-requires-python = "~=3.12"
+requires-python = "~=3.11"
 dependencies = [
     "dagster-webserver>=1.8.7",
     "dagster>=1.8.7",
@@ -12,6 +12,12 @@ dependencies = [
     "pandas>=2.2.2",
     "polars>=1.7.1",
     "pyarrow>=17.0.0",
+    "catboost>=1.2.7",
+    "ipywidgets>=8.1.5",
+    "numpy>=1.26.4",
+    "scikit-learn>=1.5.2",
+    "lightgbm>=4.5.0",
+    "xgboost>=2.1.2",
 ]
 
 [tool.uv]
