--- a/dashboard/pyproject.toml
+++ b/dashboard/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "polars>=1.10.0",
     "pyarrow-hotfix>=0.6",
     "streamlit>=1.39.0",
+    "python-dotenv>=1.0.1",
 ]
 
 [project.optional-dependencies]
