--- a/.github/workflows/prod__run-dagster.yaml
+++ b/.github/workflows/prod__run-dagster.yaml
@@ -1,9 +1,14 @@
-name: dev__run-dagster
+name: prod__run-dagster
 
 on:
   schedule:
     - cron: '0 5 * * 0'
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'transformations/**'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -16,7 +21,7 @@ env:
 jobs:
   run-dagster:
     runs-on: ubuntu-latest
-    environment: dev
+    environment: prod
 
     defaults:
       run:
@@ -30,6 +35,7 @@ jobs:
         id: setup-uv
         uses: astral-sh/setup-uv@v3
         with:
+          version: "0.5.x"
           enable-cache: true
           cache-dependency-glob: ${{ env.UV_LOCK_FILE }}
 
@@ -46,7 +52,7 @@ jobs:
         if: steps.uv-cache.outputs.cache-hit != 'true'
         run: |
           mkdir -p $UV_CACHE_DIR
-          uv python install 3.12
+          uv python install 3.11
           uv sync
           echo "Cache directory after uv sync:"
           ls -R $UV_CACHE_DIR
@@ -57,25 +63,25 @@ jobs:
           version: 3.x
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Authenticate gh CLI
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+      # - name: Authenticate gh CLI
+      #   run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
-      - name: Download Dagster artifact from previous run
-        run: gh run download --name dagster-play-state --dir dagster
+      # - name: Download Dagster artifact from previous run
+      #   run: gh run download --name dagster-play-state --dir dagster
 
       - name: Run Dagster pipeline
         run: task dagster:run
         env:
-          CLI_ARGS: "-f dagster_play.py"
+          CLI_ARGS: "-f dagster_catboost.py"
           MOTHERDUCK_TOKEN: ${{ secrets.MOTHERDUCK_TOKEN }}
           APP_ENV: ${{ vars.APP_ENV }}
 
       - name: Upload updated Dagster artifact
         uses: actions/upload-artifact@v4
         with:
-          name: dagster-play-state
+          name: dagster-prod-state
           path: |
             transformations/dagster/**
             !transformations/dagster/dagster.yaml
-          retention-days: 8
+          retention-days: 90
           overwrite: true
