--- a/transformations/pyproject.toml
+++ b/transformations/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "transformations"
 version = "0.1.0"
-description = "Add your description here"
+description = "Data and ML pipeline transformations, orchstrated by Dagster"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
