--- a/transformations/pyproject.toml
+++ b/transformations/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "ipywidgets>=8.1.5",
     "numpy>=1.26.4",
     "pandas>=2.2.3",
-    "polars>=1.18.0",
+    "polars-lts-cpu>=1.18.0",
     "pyarrow>=18.1.0",
     "scikit-learn>=1.6.0",
     "shap>=0.46.0",
