--- a/.github/workflows/prod__run-dagster.yaml
+++ b/.github/workflows/prod__run-dagster.yaml
@@ -2,7 +2,7 @@ name: prod__run-dagster
 
 on:
   schedule:
-    - cron: '0 5 * * 0'
+    - cron: '0 5 * * 3,6'
   workflow_dispatch:
 
 concurrency:
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install the latest version of uv (pin it when going to prod!)
+      - name: Install uv with version pinned
         id: setup-uv
         uses: astral-sh/setup-uv@v3
         with:
