--- a/transformations/dagster/dagster.yaml
+++ b/transformations/dagster/dagster.yaml
@@ -1,6 +1,8 @@
 storage:
-  sqlite:
-    base_dir: ./dagster/sqlite
+  # sqlite:
+    # base_dir: ./dagster/sqlite
+  postgres:
+    postgres_url: {"env": "POSTGRES_URL"}
 
 compute_logs:
   module: dagster.core.storage.local_compute_log_manager
