--- a/transformations/pyproject.toml
+++ b/transformations/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "catboost>=1.2.7",
     "dagster>=1.9.6",
+    "dagster-postgres>=0.25.6",
     "duckdb>=1.1.3",
     "duckdb-engine>=0.14.0",
     "ipywidgets>=8.1.5",
